add firebase support

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,9 @@
-<nz-page-header nzTitle="hello" nzSubtitle="bello"> </nz-page-header>
+<nz-page-header>
+  <nz-page-header-title>eTodo</nz-page-header-title>
+  <nz-page-header-subtitle>e stands for encryption</nz-page-header-subtitle>
+  <nz-page-header-extra>
+    <settings></settings>
+  </nz-page-header-extra>
+</nz-page-header>
+
+<router-outlet></router-outlet>
