--- a/client/src/app/todos/todos.component.html
+++ b/client/src/app/todos/todos.component.html
@@ -7,7 +7,7 @@
   <nz-list-header>
     <input
       nz-input
-      placeholder="{{ 'Todos.input_placeholder' | nzI18n }}"
+      placeholder="{{ 'Todos.input_placeholder' | translate }}"
       [nzBorderless]="true"
       (keydown)="addTodo($event)"
     />
