- Add translations - Fix popup key empty challenge - Clean data after logout - Improve robustness of state changes - Add clean todos button - Improve Todos synchronization

--- a/client/src/app/todos/todos.component.html
+++ b/client/src/app/todos/todos.component.html
@@ -45,4 +45,9 @@
       </ng-template>
     </nz-row>
   </nz-list-item>
+  <nz-list-item *ngIf="hasDoneTodos">
+    <button nz-button nzType="link" nzSize="small" (click)="clearCompleted()">
+      {{ "Todos.clear_completed" | translate }}
+    </button>
+  </nz-list-item>
 </nz-list>
