- Fix drag preview background - Fix drag preview direction with rtl

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   overflow-x: hidden;
+
+  &[dir="rtl"] {
+    .cdk-drag-preview {
+      direction: rtl;
+    }
+  }
+
+  &.dark {
+    .cdk-drag-preview {
+      background: black;
+    }
+  }
 }
