--- a/client/src/app/todos/todos.component.html
+++ b/client/src/app/todos/todos.component.html
@@ -14,6 +14,7 @@
   </nz-list-header>
   <nz-list-item
     cdkDrag
+    [cdkDragStartDelay]="200"
     [class.editing]="todo.editing"
     *ngFor="let todo of todos"
   >
@@ -31,7 +32,9 @@
           (ngModelChange)="toggleCompleted(todo, $event)"
         ></label>
       </div>
-      <span *ngIf="!todo.editing; else editTodoInput">{{ todo.title }}</span>
+      <span *ngIf="!todo.editing; else editTodoInput" selectableTextInCdkDrag>{{
+        todo.title
+      }}</span>
       <ng-template #editTodoInput>
         <input
           class="edit-todo"
