--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,4 +6,6 @@
   </nz-page-header-extra>
 </nz-page-header>
 
-<router-outlet></router-outlet>
+<div class="app-viewport">
+  <router-outlet></router-outlet>
+</div>
