--- a/client/src/app/todos/todos.component.scss
+++ b/client/src/app/todos/todos.component.scss
@@ -4,6 +4,24 @@
   display: block;
   margin: auto;
   max-width: $content-width;
+  margin-top: calc($header-height + 48px);
+  padding-bottom: $footer-height;
+}
+
+.fixed-input-container {
+  position: fixed;
+  top: $header-height;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  background: white;
+  width: 100%;
+
+  > nz-list-header {
+    flex: 1;
+    max-width: min(1200px, 95%);
+  }
 }
 
 .cdk-drag-preview {
@@ -23,32 +41,37 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-nz-list-item {
-  &.editing {
-    box-shadow: inset 0 0 4px 1px rgb(0 144 255 / 30%);
-  }
+nz-list {
+  border-top: unset;
+  border-radius: 0;
 
-  .todo-row {
-    width: 100%;
-    flex-wrap: nowrap;
-    transition: opacity 0.2s ease-in-out;
+  nz-list-item {
+    &.editing {
+      box-shadow: inset 0 0 4px 1px rgb(0 144 255 / 30%);
+    }
 
-    &.completed {
-      opacity: 0.5;
+    .todo-row {
+      width: 100%;
+      flex-wrap: nowrap;
+      transition: opacity 0.2s ease-in-out;
 
-      span {
-        text-decoration: line-through;
+      &.completed {
+        opacity: 0.5;
+
+        span {
+          text-decoration: line-through;
+        }
       }
-    }
 
-    input.edit-todo {
-      padding: unset;
-    }
+      input.edit-todo {
+        padding: unset;
+      }
 
-    .label-spacing {
-      display: flex;
-      min-width: calc(16px + 8px);
-      align-items: flex-start;
+      .label-spacing {
+        display: flex;
+        min-width: calc(16px + 8px);
+        align-items: flex-start;
+      }
     }
   }
 }
