--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nz-page-header>
-  <nz-page-header-title>eTodo</nz-page-header-title>
-  <nz-page-header-subtitle>e stands for encryption</nz-page-header-subtitle>
+  <nz-page-header-title>
+    <img class="logo" src="/assets/logo.png" />
+  </nz-page-header-title>
   <nz-page-header-extra>
     <settings></settings>
   </nz-page-header-extra>
