- Fix the background sync, is now working - Allow overriding the encryption key - Add verbose translations and new popups

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -10,6 +10,11 @@ body {
     .cdk-drag-preview {
       direction: rtl;
     }
+
+    .ant-alert-icon {
+      margin-right: initial;
+      margin-left: 8px;
+    }
   }
 
   &.dark {
